--- a/examples/example_no_cluster.ipynb
+++ b/examples/example_no_cluster.ipynb
@@ -60,7 +60,7 @@
     "        input = [(X_train_cancer, X_test_cancer, A_size, B_size, 9, \"uniform\", \"zipfian\", \"kde\",\"cancer\", \"ZIPFIAN_EXAMPLE.csv\")]\n",
     "        input_zipfian.extend([*input])\n",
     "\n",
-    "results_zipfian = pool.map(wrap_testBatchCF, input_zipfian)"
+    "results_zipfian = pool.map(wrap_compareZipfian, input_zipfian)"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "            A = i\n",
     "            B = j\n",
     "            # multiply input by number of runs\n",
-    "            input = [(X_train_res, X_test_res, \"arrival_month\", i, j, X_train_res, X_test_res, \"clustered\", \"zipfian\", \"log_reg\",\"reservations\", \"NATURAL_EXAMPLE.csv\", i)]\n",
+    "            input = [(X_train_res, X_test_res, \"arrival_month\", i, j, \"clustered\", \"zipfian\", \"log_reg\",\"reservations\", \"NATURAL_EXAMPLE.csv\", i)]\n",
     "            input_natural.extend([*input])\n",
     "\n",
     "pool = multiprocessing.Pool(multiprocessing.cpu_count())\n",
@@ -93,8 +93,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
