--- a/examples/example_no_cluster.ipynb
+++ b/examples/example_no_cluster.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functions import *\n",
+    "from algorithm_functions import *\n",
     "import multiprocessing\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler"
